--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="desarrollador web, diseñador, desarrollador front-end">
     <meta name="author" content="Geraldo González">
 
-    <title>Geraldo González | Desarrollador Web</title>
+    <title>TelecoDocs | Estudiantes de telecomunicaciones</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
