--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
     <header class="header">
         <div class="contenedor contenedor-header">
             <div class="nombre">
-                <span class="fade-in">Geraldo González</span>
+                <span class="fade-in">Teleco Docs</span>
             </div>
-            <h2 class="profesion">Desarrollador Web Front-end</h2>
+            <h2 class="profesion">estudiantes de Telecomunicaciones</h2>
         </div>
     </header>
 
     <main class="main">
         <section class="sobre-mi">
             <div class="contenedor contenedor-sobre-mi">
-                <h2 class="titulo" id="sobre-mi">Sobre mí</h2>
+                <h2 class="titulo" id="sobre-mi">Sobre nosotros</h2>
                 <div class="texto">
-                    <p class="direccion"><span class="dir">C: portafolio/geraldo-gonzalez</span></p>
+                    <p class="direccion"><span class="dir">C: portafolio/Telecodocs</span></p>
                     <p class="descripcion">
                         $
                         <span id="tagline">
@@ -91,12 +91,7 @@
                             luzca bien y
                             sea agradable a la vista de los usuarios (o en teoría debería ser así).<br><br>
 
-                            ¿Suena bien, no?
                             <br><br>
-
-                            Me gusta el fútbol (de hecho, te cuento un secreto: los colores de mi portafolio son los
-                            colores de mi equipo favorito, el A.C. Milan). Aparte de eso, también me gusta la actuación
-                            y la música.
                             <del></del></span><del id="pow-trigger"></del>
                     </p>
                 </div>
