--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
                         <span id="tagline">
                             Bienvenido: <br><br>
 
-                            Soy desarrollador front-end, me gusta mucho el... <ins>1.5</ins> Un momento, ¿sabes qué es
-                            eso, no?
-                            'Desarrollador front-end'. A ver, te explico: <br><br>
+                            Somos dos estudiantes de telecomunicaciones que queremos difundir nuestros conocimientos para 
+                            todo el mundo que lo necesite<br><br>
 
                             Un desarollador front-end es el encargado de todo lo que puedes ver en un sitio web.
                             Desde el diseño, los estilos e incluso animaciones del mismo. Básicamente hace que este
