--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section> -->
     <nav class="menu">
         <div class="foto">
-            <p><img src="img/foto.jpg" alt="Geraldo González" class="foto"></p>
+            <p><img src="img/foto.jpg" alt="Teleco Docs" class="foto"></p>
         </div>
         <div class="contenedor contenedor-menu">
             <a href="#sobre-mi">Sobre mí</a>
