--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="esp idioma">
                 <img src="img/español.png" class="bandera active" alt="Español" title="Español">
             </div>
-            <div class="eng idioma">
+           <!-- <div class="eng idioma">
                 <a href="https://geraldogonzalez.github.io/portafolio/portafolio-en/index.html"><img src="img/english.png" class="bandera" alt="English" title="Inglés"></a>
-            </div>
+            </div> -->
         </div>
     </nav>
     <header class="header">
@@ -67,7 +67,7 @@
             <div class="nombre">
                 <span class="fade-in">Teleco Docs</span>
             </div>
-            <h2 class="profesion">estudiantes de Telecomunicaciones</h2>
+            <h2 class="profesion">estudiantes de telecomunicaciones</h2>
         </div>
     </header>
 
@@ -76,19 +76,20 @@
             <div class="contenedor contenedor-sobre-mi">
                 <h2 class="titulo" id="sobre-mi">Sobre nosotros</h2>
                 <div class="texto">
-                    <p class="direccion"><span class="dir">C: portafolio/Telecodocs</span></p>
+                    <p class="direccion"><span class="dir">C: portafolio/TelecoDocs</span></p>
                     <p class="descripcion">
                         $
                         <span id="tagline">
                             Bienvenido: <br><br>
 
                             Somos dos estudiantes de telecomunicaciones que queremos difundir nuestros conocimientos para 
-                            todo el mundo que lo necesite<br><br>
+                            todo el mundo que lo necesite.<br><br>
 
-                            Un desarollador front-end es el encargado de todo lo que puedes ver en un sitio web.
-                            Desde el diseño, los estilos e incluso animaciones del mismo. Básicamente hace que este
-                            luzca bien y
-                            sea agradable a la vista de los usuarios (o en teoría debería ser así).<br><br>
+                            En el mundo de las telecomunicaciones se abordan temas como redes de comunicación, sistemas inalámbricos,
+                            transmisión de datos y tecnología de fibra óptica.  
+                            También se estudian protocolos de comunicación, seguridad en redes y desarrollo de infraestructura digital.  
+                            Estos conocimientos son fundamentales para mantenernos conectados en un mundo cada vez más globalizado.  
+                            Nuestro propósito es ayudarte a comprender y aplicar estos conceptos en situaciones reales.<br><br>
 
                             <br><br>
                             <del></del></span><del id="pow-trigger"></del>
@@ -105,11 +106,11 @@
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="https://geraldogonzalez.github.io/practicas/airbnb-clon/index.html" target="_blank"><img
-                                src="img/proyectos/airnbnb.jpg" alt=""></a>
+                        <a href="" target="_blank"><img
+                                src="" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>MiViaje.com</h4>
+                        <h4>FORBIDDEN</h4>
                         <h5>Tecnologías utilizadas:</h5>
                         <p><span class="html">HTML5</span> - <span class="css">CSS3</span> - <span class="javascript">JavaScript</span></p>
                     </div>
@@ -117,7 +118,7 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="https://geraldogonzalez.github.io/practicas/cafe/index.html" target="_blank"><img src="img/proyectos/cafe.jpg"
+                        <a href="" target="_blank"><img src=""
                                 alt=""></a>
                     </div>
                     <div class="info">
@@ -127,7 +128,7 @@
                     </div>
                 </div>
 
-                <div class="proyecto">
+               <!-- <div class="proyecto">
                     <div class="foto">
                         <a href="https://geraldogonzalez.github.io/practicas/blog/index.html" target="_blank"><img src="img/proyectos/blog.jpg"
                                 alt=""></a>
@@ -152,7 +153,7 @@
                             <p><span class="html">HTML5</span> - <span class="css">CSS3</span> - <span class="javascript">JavaScript</span>
                                 - <span class="bootstrap">Bootstrap</span></p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
         </section>
 
@@ -327,7 +328,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+   <!-- <footer class="footer">
         <div class="contenedor">
             <div class="redes-sociales" id="contacto">
                 <a href="https://www.linkedin.com/in/geraldo-gonzález-326898178" target="_blank" class="social linkedin"
@@ -341,8 +342,8 @@
                 <a href="https://github.com/geraldogonzalez/" target="_blank" class="social github" title="GitHub"><i
                         class="fab fa-github"></i></a>
             </div>
-        </div>
-        <p class="autor">Geraldo González - 2019</p>
+        </div> -->
+        <p class="autor">Teleco Docs - 2025</p>
         <span><i class="boton-arriba fa fa-chevron-up" id="boton-arriba" aria-hidden="true"></i></span>
     </footer>
 
