--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="info">
                         <h4>FORBIDDEN</h4>
                         <h5>Tecnologías utilizadas:</h5>
-                        <p><span class="html">HTML5</span> - <span class="css">CSS3</span> - <span class="javascript">JavaScript</span></p>
+                        <p><span class="html">pigtail</span> - <span class="css">fusionadora</span> - <span class="javascript">peladora</span></p>
                     </div>
                 </div>
 
@@ -122,7 +122,7 @@
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>Cafe Milanello</h4>
+                        <h4>FORBIDDEN</h4>
                         <h5>Tecnologías utilizadas:</h5>
                         <p><span class="html">HTML5</span> - <span class="css">CSS3</span> - <span class="javascript">JavaScript</span></p>
                     </div>
