--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portafolio online de un desarrollador web. Desarrollador front-end Geraldo González, creador de sitios webs atractivos, dinamicos e intuitivos.">
-    <meta name="keywords" content="desarrollador web, diseñador, desarrollador front-end">
-    <meta name="author" content="Geraldo González">
+    <meta name="description" content="Portafolio de dos estudiantes de telecomunicaciones.">
+    <meta name="keywords" content="Teleco, redes, telecomunicaciones">
+    <meta name="author" content="Teleco Docs">
 
     <title>TelecoDocs | Estudiantes de telecomunicaciones</title>
 
