--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </div>
         <!--. contenedor-conocimientos -->
 
-        <section class="certificados">
+        <!-- <section class="certificados">
             <h2 class="titulo" id="certificados">Certificados obtenidos</h2>
             <div class="contenedor contenedor-certificados">
                 <a href="img/certificados/html.jpg" data-lightbox="certificado" data-title="Certificado HTML - SoloLearn"><img
@@ -325,7 +325,7 @@
 
                 <a href="img/certificados/desarrollo2.jpg" data-lightbox="certificado" data-title="Certificado desarrollo web 2 - Google e IEI"><img
                         src="img/certificados/desarrollo2.jpg" alt=""></a>
-        </section>
+        </section> -->
     </main>
 
    <!-- <footer class="footer">
