--- a/index.html
+++ b/index.html
@@ -70,7 +70,15 @@
             <h2 class="profesion">estudiantes de telecomunicaciones</h2>
         </div>
     </header>
-
+    <section id="asignaturas">
+        <h2>Asignaturas</h2>
+        <ul>
+          <li><a href="asignaturas/matematicas/index.html">Matemáticas</a></li>
+          <li><a href="asignaturas/fisica/index.html">Física</a></li>
+          <!-- Añade más asignaturas según sea necesario -->
+        </ul>
+      </section>
+      
     <main class="main">
         <section class="sobre-mi">
             <div class="contenedor contenedor-sobre-mi">
