--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 src="img/proyectos/" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>FORBIDDEN</h4>
+                        <h4>microninformatica</h4>
                         <h5>temas relacionados:</h5>
                         <p><span class="html">pigtail</span> - <span class="css">fusionadora</span> - <span class="javascript">peladora</span></p>
                     </div>
@@ -120,11 +120,11 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="redes/index.html" target="_blank"><img src=""
+                        <a href="redes/index.html" target="_blank"><img src="img/redes.jpg"
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>FORBIDDEN</h4>
+                        <h4>infraestrutura de redes</h4>
                         <h5>Temas relacionados:</h5>
                         <p><span class="html">redes</span> - <span class="css">cmd</span> - <span class="javascript">cables de red</span></p>
                     </div>
@@ -136,7 +136,7 @@
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>Blog</h4>
+                        <h4>electronica aplicada</h4>
                         <h5>Temas relacionados:</h5>
                         <p><span class="html">Puertas logicas</span> - <span class="css">protoboard</span> - <span class="javascript">Simulador-095</span>
                             - <span class="sass">Sass</span></p>
