--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="proyecto">
                     <div class="foto">
                         <a href="microninformatica/index.html" target="_blank"><img
-                                src="img/proyectos/" alt=""></a>
+                                src="img/proyectos/micro.jpg" alt=""></a>
                     </div>
                     <div class="info">
                         <h4>microninformatica</h4>
@@ -132,7 +132,7 @@
 
                <div class="proyecto">
                     <div class="foto">
-                        <a href="ELAP/index.html" target="_blank"><img src="img/proyectos/"
+                        <a href="ELAP/index.html" target="_blank"><img src="img/proyectos/ELAP.png"
                                 alt=""></a>
                     </div>
                     <div class="info">
