--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 src="img/proyectos/micro.jpg" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>microninformatica</h4>
+                        <h4>microinformatica</h4>
                         <h5>temas relacionados:</h5>
                         <p><span class="html">pigtail</span> - <span class="css">fusionadora</span> - <span class="javascript">peladora</span></p>
                     </div>
@@ -139,7 +139,6 @@
                         <h4>electronica aplicada</h4>
                         <h5>Temas relacionados:</h5>
                         <p><span class="html">Puertas logicas</span> - <span class="css">protoboard</span> - <span class="javascript">Simulador-095</span>
-                            - <span class="sass">Sass</span></p>
                     </div>
                 </div>
 
