--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <a href="#contacto">Contacto</a>
         </div>
         <div class="idiomas">
-            <div class="esp idioma">
+          <!--  <div class="esp idioma">
                 <img src="img/español.png" class="bandera active" alt="Español" title="Español">
             </div>
-           <!-- <div class="eng idioma">
+                <div class="eng idioma">
                 <a href="https://geraldogonzalez.github.io/portafolio/portafolio-en/index.html"><img src="img/english.png" class="bandera" alt="English" title="Inglés"></a>
             </div> -->
         </div>
