--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+F<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -108,7 +108,7 @@
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="microninformatica/index.html" target="_blank"><img
+                        <a href="asignaturas/microinformatica/microinformatica.md" target="_blank"><img
                                 src="img/proyectos/micro.jpg" alt=""></a>
                     </div>
                     <div class="info">
