--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ F<!DOCTYPE html>
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="asignaturas/microinformatica/desmontaje-pc.pdf" target="_blank"><img
+                        <a href="asignaturas/microinformatica/index.html" target="_blank"><img
                                 src="img/proyectos/micro.jpg" alt=""></a>
                     </div>
                     <div class="info">
