--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -1,64 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/lightbox.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="css/style.css">
-  
+<!-- CDN DE SCROLL ANIMADO -->
+<head lang="es">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Portafolio de dos estudiantes de telecomunicaciones.">
+    <meta name="keywords" content="Teleco, redes, telecomunicaciones">
+    <meta name="author" content="Teleco Docs">
+
+    <title>TelecoDocs | Estudiantes de telecomunicaciones</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <section class="proyectos">
-        <h2 class="titulo" id="proyectos">Proyectos de las asignaturas</h2>
-        <div class="contenedor contenedor-proyectos">
-            <div class="proyecto">
-                <div class="foto">
-                    <a href="asignaturas/microinformatica/desmontaje-pc.pdf" target="_blank"><img
-                            src="img/proyectos/micro.jpg" alt=""></a>
-                </div>
-                <div class="info">
-                    <h4>microinformatica</h4>
-                    <h5>temas relacionados:</h5>
-                    <p><span class="html">pigtail</span> - <span class="css">fusionadora</span> - <span class="javascript">peladora</span></p>
-                </div>
-            </div>
+    <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-            <div class="proyecto">
-                <div class="foto">
-                    <a href="redes/index.html" target="_blank"><img src="img/redes.jpg"
-                            alt=""></a>
-                </div>
-                <div class="info">
-                    <h4>infraestrutura de redes</h4>
-                    <h5>Temas relacionados:</h5>
-                    <p><span class="html">redes</span> - <span class="css">cmd</span> - <span class="javascript">cables de red</span></p>
-                </div>
+    <!-- <section class="barra-carga" id="barra-carga">
+            <div class="carga">
+                <div class="linea"></div>
+                <div class="linea"></div>
+                <div class="linea"></div>
+                <div class="linea"></div>
+                <div class="linea"></div>
+                <div class="linea"></div>
+                <div class="linea"></div>
+                <div class="linea"></div>
             </div>
+        </section> -->
+    <nav class="menu">
+        <div class="foto">
+            <p><img src="img/foto.jpg" alt="Teleco Docs" class="foto"></p>
+        </div>
+        <div class="contenedor contenedor-menu">
+            <a href="#sobre-mi">Sobre mí</a>
+            <a href="#proyectos">Proyectos</a>
+            <a href="#conocimientos">Habilidades</a>
+            <a href="#contacto">Contacto</a>
+        </div>
+        <div class="idiomas">
+          <!--  <div class="esp idioma">
+                <img src="img/español.png" class="bandera active" alt="Español" title="Español">
+            </div>
+                <div class="eng idioma">
+                <a href="https://geraldogonzalez.github.io/portafolio/portafolio-en/index.html"><img src="img/english.png" class="bandera" alt="English" title="Inglés"></a>
+            </div> -->
+        </div>
+    </nav>
+    <header class="header">
+        <div class="contenedor contenedor-header">
+            <div class="nombre">
+                <span class="fade-in">Teleco Docs</span>
+            </div>
+            <h2 class="profesion">estudiantes de telecomunicaciones</h2>
+        </div>
+    </header>
 
-           <div class="proyecto">
-                <div class="foto">
-                    <a href="ELAP/index.html" target="_blank"><img src="img/proyectos/ELAP.png"
-                            alt=""></a>
+    
+    
+    <main class="main">
+       <section class="proyectos">
+            <h2 class="titulo" id="proyectos">Proyectos de las asignaturas</h2>
+            <div class="contenedor contenedor-proyectos">
+                <div class="proyecto">
+                    <div class="foto">
+                        <a href="asignaturas/microinformatica/index.html" target="_blank"><img
+                                src="img/proyectos/micro.jpg" alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>microinformatica</h4>
+                        <h5>temas relacionados:</h5>
+                        <p><span class="html">pigtail</span> - <span class="css">fusionadora</span> - <span class="javascript">peladora</span></p>
+                    </div>
                 </div>
-                <div class="info">
-                    <h4>electronica aplicada</h4>
-                    <h5>Temas relacionados:</h5>
-                    <p><span class="html">Puertas logicas</span> - <span class="css">protoboard</span> - <span class="javascript">Simulador-095</span>
-                </div>
-            </div>
 
+                <div class="proyecto">
+                    <div class="foto">
+                        <a href="redes/index.html" target="_blank"><img src="img/redes.jpg"
+                                alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>infraestrutura de redes</h4>
+                        <h5>Temas relacionados:</h5>
+                        <p><span class="html">redes</span> - <span class="css">cmd</span> - <span class="javascript">cables de red</span></p>
+                    </div>
+                </div>
+
+               <div class="proyecto">
+                    <div class="foto">
+                        <a href="ELAP/index.html" target="_blank"><img src="img/proyectos/ELAP.png"
+                                alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>electronica aplicada</h4>
+                        <h5>Temas relacionados:</h5>
+                        <p><span class="html">Puertas logicas</span> - <span class="css">protoboard</span> - <span class="javascript">Simulador-095</span>
+                    </div>
+                </div>
+
+                <!-- <div class="proyecto">
+                    <div class="foto">
+                        <a href="https://geraldogonzalez.github.io/practicas/galeria/index.html" target="_blank"><img
+                                src="img/proyectos/galería.jpg" alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>Virtual Shop</h4>
+                        <div class="tech">
+                            <h5>Tecnologías utilizadas:</h5>
+                            <p><span class="html">HTML5</span> - <span class="css">CSS3</span> - <span class="javascript">JavaScript</span>
+                                - <span class="bootstrap">Bootstrap</span></p>
+                        </div>
+                    </div> -->
+                </div>
+        </section>
+
+    </main>
+
+   <!-- <footer class="footer">
+        <div class="contenedor">
+            <div class="redes-sociales" id="contacto">
+                <a href="https://www.linkedin.com/in/geraldo-gonzález-326898178" target="_blank" class="social linkedin"
+                    title="Linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/geraldogonzalez_/" target="_blank" class="social instagram" title="Instagram"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://www.twitter.com/geraldgonzalez_" target="_blank" class="social twitter" title="Twitter"><i
+                        class="fab fa-twitter"></i></a>
+                <a href="https://www.youtube.com/channel/UCxPGZROtAFFqwWXJcxGqVlQ?view_as=subscriber" target="_blank"
+                    class="social youtube" title="YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="https://github.com/geraldogonzalez/" target="_blank" class="social github" title="GitHub"><i
+                        class="fab fa-github"></i></a>
             </div>
-    </section>
+        </div> -->
+        <p class="autor">Teleco Docs - 2025</p>
+        <span><i class="boton-arriba fa fa-chevron-up" id="boton-arriba" aria-hidden="true"></i></span>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="js/t.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 </body>
-</html> 
 
-
-
-
+</html>
