subida de proyecto

--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -58,21 +58,21 @@
     
     <main class="main">
        <section class="proyectos">
-            <h2 class="titulo" id="proyectos">Proyectos de las asignaturas</h2>
+            <h2 class="titulo" id="proyectos">Proyectos de microinformatica</h2>
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="asignaturas/microinformatica/index.html" target="_blank"><img
+                        <a href="asignaturas/microinformatica/pdf/desmontaje-pc.pdf" target="_blank"><img
                                 src="img/proyectos/micro.jpg" alt=""></a>
                     </div>
                     <div class="info">
                         <h4>microinformatica</h4>
-                        <h5>temas relacionados:</h5>
-                        <p><span class="html">pigtail</span> - <span class="css">fusionadora</span> - <span class="javascript">peladora</span></p>
+                        <h5>habilidades aprendidas:</h5>
+                        <p><span class="html">desmontaje de pc</span> - <span class="css">montaje de pc</span> - <span class="javascript">componentes</span></p>
                     </div>
                 </div>
 
-                <div class="proyecto">
+                <!-- <div class="proyecto">
                     <div class="foto">
                         <a href="redes/index.html" target="_blank"><img src="img/redes.jpg"
                                 alt=""></a>
@@ -94,7 +94,7 @@
                         <h5>Temas relacionados:</h5>
                         <p><span class="html">Puertas logicas</span> - <span class="css">protoboard</span> - <span class="javascript">Simulador-095</span>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="proyecto">
                     <div class="foto">
