--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -54,7 +54,7 @@
                                 src="img/proyectos/henrycavil.jpg" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>microinformatica</h4>
+                        <h4>desmontaje y montaje de pc</h4>
                         <h5>habilidades aprendidas:</h5>
                         <p><span class="html">desmontaje de pc</span> - <span class="css">montaje de pc</span> - <span class="javascript">componentes</span></p>
                     </div>
