--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -50,7 +50,7 @@
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="asignaturas/microinformatica/pdf/desmontaje-pc.pdf" target="_blank"><img
+                        <a href="pdf/desmontaje-pc.pdf" target="_blank"><img
                                 src="img/proyectos/henrycavil.jpg" alt=""></a>
                     </div>
                     <div class="info">
