--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -56,7 +56,7 @@
                     <div class="info">
                         <h4>desmontaje y montaje de pc</h4>
                         <h5>habilidades aprendidas:</h5>
-                        <p><span class="html">desmontaje de pc</span> - <span class="css">montaje de pc</span> - <span class="javascript">componentes</span></p>
+                        <p><span class="html">desmontaje</span> - <span class="css">montaje</span> - <span class="javascript">componentes</span></p>
                     </div>
                 </div>
 
