--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -60,18 +60,18 @@
                     </div>
                 </div>
 
-                <!-- <div class="proyecto">
+                 <div class="proyecto">
                     <div class="foto">
-                        <a href="redes/index.html" target="_blank"><img src="img/redes.jpg"
+                        <a href="img/cominsoon.jpg" target="_blank"><img src="img/cominsoon.jpg"
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>infraestrutura de redes</h4>
+                        <h4>Soldadura</h4>
                         <h5>Temas relacionados:</h5>
-                        <p><span class="html">redes</span> - <span class="css">cmd</span> - <span class="javascript">cables de red</span></p>
+                        <p><span class="html"></span> - <span class="css"></span> - <span class="javascript"></span></p>
                     </div>
                 </div>
-
+               <!--
                <div class="proyecto">
                     <div class="foto">
                         <a href="ELAP/index.html" target="_blank"><img src="img/proyectos/ELAP.png"
