--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             
         </section>
 
-        <div class="conocimientos">
+        <!--div class="conocimientos">
             <h2 class="titulo" id="conocimientos">Habilidades tecnológicas</h2>
             <div class="contenedor">
                 <div class="contenedor-conocimientos">
@@ -169,7 +169,7 @@
                     </div>
                     <!--. tarjeta -->
 
-                    <div class="tarjeta">
+                   <!-- <div class="tarjeta">
                         <input type="checkbox" name="">
                         <div class="cambio black">+</div>
                         <div class="img">
@@ -194,7 +194,7 @@
                     </div>
                     <!--. tarjeta -->
 
-                    <div class="tarjeta">
+                  <!--  <div class="tarjeta">
                         <input type="checkbox" name="">
                         <div class="cambio red">+</div>
                         <div class="img">
@@ -216,7 +216,7 @@
                     </div>
                     <!--. tarjeta -->
 
-                    <div class="tarjeta">
+                   <!-- <div class="tarjeta">
                         <input type="checkbox" name="">
                         <div class="cambio black">+</div>
                         <div class="img">
@@ -238,7 +238,7 @@
                     </div>
                     <!--. tarjeta -->
 
-                    <div class="tarjeta">
+                  <!--  <div class="tarjeta">
                         <input type="checkbox" name="">
                         <div class="cambio red">+</div>
                         <div class="img">
@@ -262,7 +262,7 @@
                     </div>
                     <!--. tarjeta -->
 
-                    <div class="tarjeta">
+                   <!-- <div class="tarjeta">
                         <input type="checkbox" name="">
                         <div class="cambio black">+</div>
                         <div class="img">
