--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="contenedor contenedor-menu">
             <a href="#sobre-mi">Sobre mí</a>
             <a href="#proyectos">Proyectos</a>
-            <a href="#conocimientos">Habilidades</a>
+           <!-- <a href="#conocimientos">Habilidades</a> -->
             <a href="#contacto">Contacto</a>
         </div>
        
