--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <a href="https://github.com/telecodocs/" target="_blank" class="social github" title="GitHub"><i
                         class="fab fa-github"></i></a>
             </div>
-        </div> -->
+        </div> 
         <p class="autor">Teleco Docs - 2025</p>
         <span><i class="boton-arriba fa fa-chevron-up" id="boton-arriba" aria-hidden="true"></i></span>
     </footer>
