--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
+
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -43,7 +44,11 @@
                 <div class="linea"></div>
             </div>
         </section> -->
-    
+
+        <video autoplay muted loop id="background-video">
+            <source src="../video/background.mp4" type="video/mp4">
+        </video>
+
     <main class="main">
        <section class="proyectos">
             <h2 class="titulo" id="proyectos">Proyectos de microinformatica</h2>
@@ -99,6 +104,8 @@
                     </div> -->
                 </div>
         </section>
+        
+        <div id="particles-js"></div>
 
     </main>
 
@@ -111,6 +118,8 @@
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/t.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
+    <script src="particles.js"></script>
+
 </body>
 
 </html>
