--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -44,7 +44,7 @@
                 <div class="linea"></div>
             </div>
         </section> -->
-
+        <div id="particles-js"></div>
         <video autoplay muted loop id="background-video">
             <source src="../video/background.mp4" type="video/mp4">
         </video>
@@ -104,8 +104,7 @@
                     </div> -->
                 </div>
         </section>
-        
-        <div id="particles-js"></div>
+    
 
     </main>
 
@@ -119,6 +118,7 @@
     <script src="js/t.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
     <script src="particles.js"></script>
+	<script src="particulas.js"></script>
 
 </body>
 
