--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -117,8 +117,8 @@
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/t.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
-    <script src="particles.js"></script>
-	<script src="particulas.js"></script>
+	<script src="js/particulas.js"></script>
+    <script src="js/particles.js"></script>
 
 </body>
 
