--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -27,7 +27,7 @@
 </head>
 
 
-<body>
+<body id="particles-js">
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -44,11 +44,7 @@
                 <div class="linea"></div>
             </div>
         </section> -->
-        <div id="particles-js"></div>
-        <video autoplay muted loop id="background-video">
-            <source src="../video/background.mp4" type="video/mp4">
-        </video>
-
+ 
     <main class="main">
        <section class="proyectos">
             <h2 class="titulo" id="proyectos">Proyectos de microinformatica</h2>
@@ -117,8 +113,8 @@
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/t.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
-	<script src="js/particulas.js"></script>
-    <script src="js/particles.js"></script>
+    <script src="particles.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 
