--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -48,7 +48,7 @@
     <main class="main">
        <section class="proyectos">
             <h2 class="titulo" id="proyectos">Proyectos de microinformatica</h2>
-            <div class="contenedor contenedor-proyectos">
+            <div class=" contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
                         <a href="pdf/desmontaje-pc.pdf" target="_blank"><img
