--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -48,7 +48,7 @@
     <main class="main">
        <section class="proyectos">
             <h2 class="titulo" id="proyectos">Proyectos de microinformatica</h2>
-            <div class=" contenedor-proyectos">
+            <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
                         <a href="pdf/desmontaje-pc.pdf" target="_blank"><img
@@ -72,18 +72,18 @@
                         <p><span class="html"></span> - <span class="css"></span> - <span class="javascript"></span></p>
                     </div>
                 </div>
-               <!--
+               
                <div class="proyecto">
                     <div class="foto">
-                        <a href="ELAP/index.html" target="_blank"><img src="img/proyectos/ELAP.png"
+                        <a href="apuntes/microinformatica.md" target="_blank"><img src="img/Arquitectura_Von_Neumann.png"
                                 alt=""></a>
                     </div>
                     <div class="info">
                         <h4>electronica aplicada</h4>
                         <h5>Temas relacionados:</h5>
-                        <p><span class="html">Puertas logicas</span> - <span class="css">protoboard</span> - <span class="javascript">Simulador-095</span>
+                        <p><span class="html">Von Neumann</span> - <span class="css">Ordenadores</span> - <span class="javascript">Hardware</span>
                     </div>
-                </div> -->
+                </div> 
 
                 <!-- <div class="proyecto">
                     <div class="foto">
