--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -75,7 +75,7 @@
                
                <div class="proyecto">
                     <div class="foto">
-                        <a href="apuntes/microinformatica.md" target="_blank"><img src="img/Arquitectura_Von_Neumann.png"
+                        <a href="apuntes/microinformatica.pdf" target="_blank"><img src="img/Arquitectura_Von_Neumann.png"  width="300" height="135"
                                 alt=""></a>
                     </div>
                     <div class="info">
