--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="redes/index.html" target="_blank"><img src="img/cominsoon.jpg"
+                        <a href="asignaturas/redes/index.html" target="_blank"><img src="img/redes.jpg"
                                 alt=""></a>
                     </div>
                     <div class="info">
