--- a/asignaturas/redes/index.html
+++ b/asignaturas/redes/index.html
@@ -47,17 +47,17 @@
  
     <main class="main">
        <section class="proyectos">
-            <h2 class="titulo" id="proyectos">Proyectos de microinformatica</h2>
+            <h2 class="titulo" id="proyectos">Proyectos de redes</h2>
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
                         <a href="pdf/desmontaje-pc.pdf" target="_blank"><img
-                                src="img/proyectos/henrycavil.jpg" alt=""></a>
+                                src="img/cominsoon.jpg" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>desmontaje y montaje de pc</h4>
+                        <h4>Haciendo un clabe UTP</h4>
                         <h5>habilidades aprendidas:</h5>
-                        <p><span class="html">desmontaje</span> - <span class="css">montaje</span> - <span class="javascript">componentes</span></p>
+                        <p><span class="html">Cable UTP</span> - <span class="css">Categorias de cables</span> - <span class="javascript">uso de tester-lan</span></p>
                     </div>
                 </div>
 
