--- a/asignaturas/redes/index.html
+++ b/asignaturas/redes/index.html
@@ -55,7 +55,7 @@
                                 src="img/cominsoon.jpg" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>Haciendo un clabe UTP</h4>
+                        <h4>REALIZACIÓN DE CABLEADO ETHERNET</h4>
                         <h5>habilidades aprendidas:</h5>
                         <p><span class="html">Cable UTP</span> - <span class="css">Categorias de cables</span> - <span class="javascript">uso de tester-lan</span></p>
                     </div>
