--- a/asignaturas/redes/index.html
+++ b/asignaturas/redes/index.html
@@ -51,13 +51,13 @@
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="pdf/desmontaje-pc.pdf" target="_blank"><img
-                                src="img/cominsoon.jpg" alt=""></a>
+                        <a href="pdf/cable-ethernet.pdf" target="_blank"><img
+                                src="img/cable-utp.jpg" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>REALIZACIÓN DE CABLEADO ETHERNET</h4>
+                        <h4>REALIZACIÓN DE CABLE ETHERNET</h4>
                         <h5>habilidades aprendidas:</h5>
-                        <p><span class="html">Cable UTP</span> - <span class="css">Categorias de cables</span> - <span class="javascript">uso de tester-lan</span></p>
+                        <p><span class="html">UTP</span> - <span class="css">Cat 5,6,7</span> - <span class="javascript">tester lan</span></p>
                     </div>
                 </div>
 
@@ -67,9 +67,9 @@
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>Soldadura</h4>
+                        <h4>FUSIONADORA DE FIBRA OPTICA</h4>
                         <h5>Temas relacionados:</h5>
-                        <p><span class="html"></span> - <span class="css"></span> - <span class="javascript"></span></p>
+                        <p><span class="html">fibra optica</span> - <span class="css">fusionado</span> - <span class="javascript"></span></p>
                     </div>
                 </div>
                
