--- a/asignaturas/redes/index.html
+++ b/asignaturas/redes/index.html
@@ -63,7 +63,7 @@
 
                  <div class="proyecto">
                     <div class="foto">
-                        <a href="img/cominsoon.jpg" target="_blank"><img src="img/cominsoon.jpg"
+                        <a href="https://drive.google.com/file/d/1bUZ_HaVpS3PD270vDCBKGzPC1r2xAbDK/view?usp=sharing" target="_blank"><img src="img/fibra-optica.jpg"
                                 alt=""></a>
                     </div>
                     <div class="info">
