--- a/asignaturas/redes/index.html
+++ b/asignaturas/redes/index.html
@@ -69,19 +69,19 @@
                     <div class="info">
                         <h4>FUSIONADORA DE FIBRA OPTICA</h4>
                         <h5>Temas relacionados:</h5>
-                        <p><span class="html">fibra optica</span> - <span class="css">fusionado</span> - <span class="javascript"></span></p>
+                        <p><span class="html">fibra optica</span> - <span class="css">fusionado</span>  <span class="javascript"></span></p>
                     </div>
                 </div>
                
                <div class="proyecto">
                     <div class="foto">
-                        <a href="apuntes/microinformatica.pdf" target="_blank"><img src="img/Arquitectura_Von_Neumann.png"  width="300" height="135"
+                        <a href="pdf/practica-ipv4.pdf" target="_blank"><img src="img/ipv4.jpg"  width="300" height="135"
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4></h4>
+                        <h4>Práctica IPV4</h4>
                         <h5>Temas relacionados:</h5>
-                        <p><span class="html">Von Neumann</span> - <span class="css">Ordenadores</span> - <span class="javascript">Hardware</span>
+                        <p><span class="html">IP</span> - <span class="css">CMD</span> - <span class="javascript">Redes</span>
                     </div>
                 </div> 
 
