--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -79,7 +79,7 @@
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>electronica aplicada</h4>
+                        <h4>Arquitectura Von Neumann</h4>
                         <h5>Temas relacionados:</h5>
                         <p><span class="html">Von Neumann</span> - <span class="css">Ordenadores</span> - <span class="javascript">Hardware</span>
                     </div>
