--- a/asignaturas/microinformatica/index.html
+++ b/asignaturas/microinformatica/index.html
@@ -55,7 +55,7 @@
                                 src="img/proyectos/henrycavil.jpg" alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>desmontaje y montaje de pc</h4>
+                        <h4>desmontaje y montaje de PC</h4>
                         <h5>habilidades aprendidas:</h5>
                         <p><span class="html">desmontaje</span> - <span class="css">montaje</span> - <span class="javascript">componentes</span></p>
                     </div>
@@ -63,13 +63,13 @@
 
                  <div class="proyecto">
                     <div class="foto">
-                        <a href="img/cominsoon.jpg" target="_blank"><img src="img/cominsoon.jpg"
+                        <a href="pdf/componentes-hardware-pc.pdf" target="_blank"><img src="img/hardware-pc.jpg"
                                 alt=""></a>
                     </div>
                     <div class="info">
-                        <h4>Soldadura</h4>
+                        <h4>componentes internos PC</h4>
                         <h5>Temas relacionados:</h5>
-                        <p><span class="html"></span> - <span class="css"></span> - <span class="javascript"></span></p>
+                        <p><span class="html">Apuntes</span> - <span class="css">Hardware</span> - <span class="javascript">PC</span></p>
                     </div>
                 </div>
                
